Add contact info

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="me" href="https://github.com/kirill-kundik/" type="text/html">
+  <link rel="me" href="mailto:k.kundik@ukma.edu.ua">
+  <link rel="me" href="sms:+380672864315">
     <title>Kundik Kyrylo — Résumé</title>
   </head>
   <body>
