some magic added

--- a/index.html
+++ b/index.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="UTF-8">
     <title>Kundik Kyrylo — Résumé</title>
-  </head>
-  <body>
-  
-  </body>
+
+    <!-- LESS основний файл -->
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
+</head>
+<body>
+
+<div class="main-container">
+    <div class="header">
+        <div class="name">
+            KUNDIK KYRYLO
+        </div>
+        <div class="occupation">
+            PROGRAMMER
+        </div>
+        <div class="photo">
+
+        </div>
+    </div>
+    <div class="container">
+        <div class="left-side"></div>
+        <div class="right-side"></div>
+    </div>
+    <div class="footer">
+        <div class="made-by">
+            Made by Kundik Kyrylo.
+        </div>
+    </div>
+</div>
+
+<!-- jQuery JavaScript -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+
+<!--Own JavaScript -->
+<!--<script type="text/javascript" src="assets/js/main.js"></script>-->
+</body>
 </html>
